# rust-zero-cost-abstractions

./: .gitignore  Cargo.toml  README.md  Results.md  csharp-bench.sln
.cargo/: config
csharp-bench/: FunctionsBench.cs  Program.cs  TestSet.cs  csharp-bench.csproj  run.sh
java-bench/: .factorypath  .project  pom.xml  run.sh
java-bench/src/main/java/com/zca/: FunctionsBenchmark.java
rust-zca-bench/: Cargo.toml  run.sh
rust-zca-bench/benches/: zca_benchmark.rs
rust-zca-bench/src/: lib.rs
