[package]
name = "rust-zca-bench"
version = "0.1.0"
authors = ["Michael Barber <60610888+mike-barber@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "zca_benchmark"
harness = false

